Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/B2B_Shipping_Methods__mdt.object-meta.xml
<CustomObject>
    <label>B2B Shipping Methods</label>
    <pluralLabel>B2B Shipping Methods</pluralLabel>
</CustomObject>