Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/fields/Above_Threshold_Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Above_Threshold_Shipping_Charge__c</fullName>
    <label>Above Threshold Shipping Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>