Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/fields/Below_Threshold_Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Below_Threshold_Shipping_Charge__c</fullName>
    <label>Below Threshold Shipping Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>