Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>