Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/fields/isHazardous__c.field-meta.xml
<CustomField>
    <fullName>isHazardous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHazardous</label>
    <type>Checkbox</type>
</CustomField>