Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/fields/Maximum_Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Shipping_Charge__c</fullName>
    <label>Maximum Shipping Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>