Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/fields/Percent_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Percent_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percent Calculation?</label>
    <type>Checkbox</type>
</CustomField>