Perkin-UAT/force-app/main/default/objects/B2B_Shipping_Methods__mdt/fields/Percent_of_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Net_Cost__c</fullName>
    <label>Percent of Net Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>